# SC-GameEngine

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  imgui.ini
assets/shaders/: mesh.vert  mesh_tex.frag  mesh_tex.vert  triangle.frag  triangle.vert
assets/textures/: checker.ppm  test.ppm
assets/world/: asset_registry.txt
cmake/modules/: SCShaders.cmake
src/core/: CMakeLists.txt
src/core/include/: sc_ecs.h  sc_jobs.h  sc_log.h  sc_math.h  sc_memory.h  sc_memtrack.h  sc_paths.h  sc_scheduler.h  sc_time.h
src/core/src/: sc_ecs.cpp  sc_jobs.cpp  sc_log.cpp  sc_math.cpp  sc_memory.cpp  sc_memtrack.cpp  sc_paths.cpp  sc_scheduler.cpp  sc_time.cpp
src/engine/: CMakeLists.txt
src/engine/include/: sc_app.h  sc_assets.h  sc_debug_draw.h  sc_engine_render.h  sc_imgui.h  sc_vk.h
src/engine/physics/: sc_physics.cpp  sc_physics.h  sc_vehicle.cpp  sc_vehicle.h
src/engine/src/: sc_app.cpp  sc_assets.cpp  sc_debug_draw.cpp  sc_debug_draw_system.cpp  sc_engine_render.cpp  sc_imgui.cpp  sc_vk.cpp
src/engine/traffic/: sc_traffic_ai.cpp  sc_traffic_ai.h  sc_traffic_common.h  sc_traffic_lanes.cpp  sc_traffic_lanes.h  sc_traffic_lod.cpp  sc_traffic_lod.h  sc_traffic_spawner.cpp  sc_traffic_spawner.h
src/engine/world/: sc_world_partition.cpp  sc_world_partition.h
src/sandbox/: CMakeLists.txt
src/sandbox/src/: main.cpp
tools/shared/: CMakeLists.txt  asset_registry.cpp  asset_registry.h  mesh_importer.cpp  mesh_importer.h  mesh_importer_glb.cpp  world_format.cpp  world_format.h
tools/world_editor/: CMakeLists.txt  main.cpp
tools/world_editor/editor_core/: editor_core.cpp  editor_core.h  sc_asset_db.cpp  sc_asset_db.h
